Changes for 3.0.26rc1

New features:

Bug fixes:
.D........ [ZBX-10496] fixed links to installation instructions in README file (dimir)
...G....S. [ZBX-15494] fixed handling numbers that written in scientific notation (asitals)
...G...... [ZBX-15316] fixed problem with socket inheritance preventing Windows agent from restarting under certain circumstances (kalimulin)

--------------------------------------------------------------------------------
Changes for 3.0.25

3.0.25rc1 was released as 3.0.25 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.25rc1

Bug fixes:
..F....... [ZBX-15577] fixed restricted user access to the host name when calling host_screen (vasilijs)
A......... [ZBX-15220] fixed displaying of last value for values received in the same second (Sasha)
........S. [ZBX-15460] reset agent availability when host status changes, e.g., when host gets disabled (asitals)
...G...PS. [ZBX-11761] added warnings in case of TLS identity mismatch (akozlovs)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)
A......... [ZBX-15354] fixed undefined index in API calls without "auth" parameter (Sasha)
A......... [ZBX-14331] fixed error allowing users to change type of a host interface that already has items attached (gcalenko)
........S. [ZBX-15313] fixed unit suffix support in calculated item expressions (kalimulin)
A.F....... [ZBX-14592] fixed calculation of SLA and availability report when problem has negative duration (miks)
A......... [ZBX-15156] fixed undefined offset error in host screen with web item (talbergs)
...G...... [ZBX-14624] fixed agent collector not releasing connection to missing/removed disk devices (Andris, yurii)
..F....... [ZBX-14604] fixed displaying of the graph name on screens (miks)
..F....... [ZBX-15233] renamed fuzzytime() function description in dropdown list (Ivo)